6/12 - Built 3 month graph - Built stock buy/sell form - TODO: Build stock form functionality

--- a/papertrade_website/investments/templates/ticker_search.html
+++ b/papertrade_website/investments/templates/ticker_search.html
@@ -3,12 +3,30 @@
 <div class="container">
     <div class="col">
         <div class="col">
-            <h1>{{ importantData.name }} ({{ ticker }}): ${{ importantData.currentPrice }}</h1>
+            <div class="row align-items-center">
+                <h1 class="ml-3 mt-4 mb-4">{{importantData.ticker }}: ${{ importantData.currentPrice }}</h1>
+                <form id="stock-transaction-form">
+                    <div class="form-row ml-4">
+                        <div class="form-row">
+                            <div class="col">
+                                <input type="text" class="form-control" id="stock-amount" name="stock_amount" placeholder="Enter stock amount" required>
+                            </div>
+                            <div class="col-auto">
+                                <button type="button" class="btn btn-success" id="buy-button">Buy</button>
+                            </div>
+                            <div class="col-auto">
+                                <button type="button" class="btn btn-danger" id="sell-button">Sell</button>
+                            </div>
+                        </div>
+                    </div>
+
+                </form>
+            </div>
         </div>
-        <div class="col border">
-            <div class="container mt-3 w-auto">
-                <div class="row border justify-content-start">
-                    <div class="d-inline-block border">
+        <div class="col">
+            <div class="container w-auto">
+                <div class="row mt-2 justify-content-start">
+                    <div class="d-inline-block">
                         <table class="table table-striped table-bordered w-auto">
                             <thead class="thead-dark">
                                 <tr>
@@ -84,8 +102,16 @@
                             </tbody>
                         </table>
                     </div>
-                    <div>
-                        <canvas style="width: 100%; height: 300px;" id="myChart"></canvas>
+                    <div class="ml-auto"></div>
+                    <div class="col">
+                        <h4 class="text-center">3-Month to Present Price for {{importantData.ticker}}</h4>
+                        <div>
+                            <canvas class="mb-5" style="width: 100%; height: 325px;" id="three_month_chart"></canvas>
+                        </div>
+                        <h4 class="text-center mt-5">Historical Stock Price for {{importantData.ticker}}</h4>
+                        <div>
+                            <canvas style="width: 100%; height: 325px;" id="allTimeChart"></canvas>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -143,7 +169,7 @@
 
     Chart.register(roundedBackgroundPlugin);
 
-    const ctx = document.getElementById('myChart').getContext('2d');
+    const ctx = document.getElementById('allTimeChart').getContext('2d');
     const chartData = JSON.parse('{{ chartData|safe }}');
 
     const dates = chartData.dates || [];
@@ -192,15 +218,15 @@
                     },
                     ticks: {
                         callback: function (value, index, ticks) {
-                                const date = new Date(dates[index]);
-                                const year = date.getFullYear();
-                                if (date.getMonth() === 0 && year % 5 === 0 && !displayedYears.has(year)) {
-                                    displayedYears.add(year); 
-                                    return year;
-                                } else {
-                                    return '';
-                                }
-                            },
+                            const date = new Date(dates[index]);
+                            const year = date.getFullYear();
+                            if (date.getMonth() === 0 && year % 5 === 0 && !displayedYears.has(year)) {
+                                displayedYears.add(year);
+                                return year;
+                            } else {
+                                return '';
+                            }
+                        },
                         autoSkip: false,
                         maxRotation: 0,
                         minRotation: 0
@@ -223,6 +249,126 @@
         }
     });
 </script>
+<script>
+    const three_month_roundedBackgroundPlugin = {
+        id: 'roundedBackground',
+        beforeDraw: (chart) => {
+            const ctx = chart.ctx;
+            const chartArea = chart.chartArea;
+            const radius = 20;
+
+            ctx.save();
+            ctx.fillStyle = 'rgba(255, 255, 255, 0.9)';
+            ctx.strokeStyle = 'rgba(0, 0, 0, 0.1)';
+            ctx.lineWidth = 2;
+
+            ctx.beginPath();
+            ctx.moveTo(chartArea.left + radius, chartArea.top);
+            ctx.lineTo(chartArea.right - radius, chartArea.top);
+            ctx.quadraticCurveTo(chartArea.right, chartArea.top, chartArea.right, chartArea.top + radius);
+            ctx.lineTo(chartArea.right, chartArea.bottom - radius);
+            ctx.quadraticCurveTo(chartArea.right, chartArea.bottom, chartArea.right - radius, chartArea.bottom);
+            ctx.lineTo(chartArea.left + radius, chartArea.bottom);
+            ctx.quadraticCurveTo(chartArea.left, chartArea.bottom, chartArea.left, chartArea.bottom - radius);
+            ctx.lineTo(chartArea.left, chartArea.top + radius);
+            ctx.quadraticCurveTo(chartArea.left, chartArea.top, chartArea.left + radius, chartArea.top);
+            ctx.closePath();
+
+            ctx.fill();
+            ctx.stroke();
+            ctx.restore();
+
+            ctx.save();
+            ctx.strokeStyle = 'rgba(0, 0, 0, 0.1)';
+            ctx.lineWidth = 1;
+
+
+            const yGridLineCount = chart.scales.y.ticks.length;
+            for (let i = 1; i < yGridLineCount - 1; i++) {
+                const y = chart.scales.y.getPixelForTick(i);
+                ctx.beginPath();
+                ctx.moveTo(chartArea.left, y);
+                ctx.lineTo(chartArea.right, y);
+                ctx.stroke();
+            }
+
+            ctx.restore();
+        }
+    };
+
+    Chart.register(three_month_roundedBackgroundPlugin);
+
+    const three_month_ctx = document.getElementById('three_month_chart').getContext('2d');
+    const three_month_chartData = JSON.parse('{{ three_month_chartData|safe }}');
+
+    const three_month_dates = three_month_chartData.dates || [];
+    const three_month_values = three_month_chartData.values || [];
+    const three_month_weekLabels = three_month_chartData.week_labels || [];
+
+    const displayedWeeks = new Set();
+
+    new Chart(three_month_ctx, {
+        type: 'line',
+        data: {
+            labels: three_month_weekLabels,
+            datasets: [{
+                label: '{{ importantData.name }} Stock Price',
+                data: three_month_values,
+                fill: false,
+                borderColor: 'rgba(75, 192, 192, 1)',
+                pointBackgroundColor: 'rgba(75, 192, 192, 1)',
+                pointBorderColor: 'rgba(75, 192, 192, 1)',
+                pointBorderWidth: 1,
+                pointRadius: 1,
+                pointHoverRadius: 5,
+                pointHoverBackgroundColor: 'rgba(75, 192, 192, 1)',
+                pointHoverBorderColor: 'rgba(75, 192, 192, 1)',
+                pointHoverBorderWidth: 2,
+            }]
+        },
+        options: {
+            responsive: true,
+            plugins: {
+                legend: {
+                    display: false,
+                }
+            },
+            scales: {
+                x: {
+                    display: true,
+                    title: {
+                        display: false,
+                    },
+                    grid: {
+                        display: false,
+                    },
+                    border: {
+                        display: false,
+                    },
+                    ticks: {
+                        autoSkip: false,
+                        maxRotation: 0,
+                        minRotation: 0
+                    }
+                },
+                y: {
+                    beginAtZero: true,
+                    title: {
+                        display: true,
+                        text: 'Value $USD',
+                    },
+                    grid: {
+                        display: false,
+                    },
+                    border: {
+                        display: false,
+                    }
+                }
+            }
+        }
+    });
+</script>
+
 
 
 {% endblock %}
