6/12 - Finalized Paper Paradise and added presentation images

--- a/papertrade_website/investments/templates/investments.html
+++ b/papertrade_website/investments/templates/investments.html
@@ -75,8 +75,8 @@
                             <th scope="col">Ticker</th>
                             <th scope="col">Price</th>
                             <th scope="col">Total Value</th>
-                            <th scope="col">Daily Change</th>
-                            <th scope="col">Trend</th>
+                            <!--<th scope="col">Daily Change</th>-->
+                            <!--<th scope="col">Trend</th>-->
                         <tbody id="investments_display">
                         {% for investment in investments_display_data %}
                             <tr>
@@ -100,10 +100,6 @@
         </div>
     </div>
 </div>
-
-<script>
-
-</script>
 
 
 {% endblock %}
