--- a/papertrade_website/homeapp/templates/home.html
+++ b/papertrade_website/homeapp/templates/home.html
@@ -51,14 +51,14 @@
         <div class="row">
             {% for article in articles %}
             <a href="{{article.link}}">
-                <div class="container border"
+                <div class="container"
                     style="width: 200px; margin-left: 20px; margin-right: 20px; justify-content: center;">
                     <div class="col" style="justify-content: center;">
-                        <div class="container border" style="width: 100%; height: 100px; border-radius: 10px;">
+                        <div class="container" style="width: 100%; height: 100px; border-radius: 10px;">
                             <img src="{{article.image}}"
                                 style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
                         </div>
-                        <p class="title-text border">{{article.title}}</p>
+                        <p class="title-text">{{article.title}}</p>
                     </div>
                 </div>
             </a>
